initial merge of all thrift apis