@@ -19,18 +19,19 @@
 */
 package org.apache.airavata.helix.core.participant;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 import org.apache.airavata.common.exception.ApplicationSettingsException;
 import org.apache.airavata.common.utils.ServerSettings;
 import org.apache.airavata.helix.core.AbstractTask;
 import org.apache.airavata.helix.core.support.TaskHelperImpl;
 import org.apache.airavata.helix.task.api.annotation.TaskDef;
+import org.apache.airavata.patform.monitoring.MonitoringServer;
 import org.apache.helix.InstanceType;
+import org.apache.helix.constants.InstanceConstants.InstanceOperation;
 import org.apache.helix.examples.OnlineOfflineStateModelFactory;
 import org.apache.helix.manager.zk.ZKHelixAdmin;
 import org.apache.helix.manager.zk.ZKHelixManager;
-import org.apache.helix.manager.zk.ZNRecordSerializer;
-import org.apache.helix.manager.zk.ZkClient;
 import org.apache.helix.model.BuiltInStateModelDefinitions;
 import org.apache.helix.model.InstanceConfig;
 import org.apache.helix.participant.StateMachineEngine;
@@ -116,11 +117,11 @@ public class HelixParticipant<T extends AbstractTask> implements Runnable {
             TaskFactory taskFac = context -> {
                 try {
                     return AbstractTask.class
-                            .cast(taskClass.newInstance())
+                            .cast(taskClass.getDeclaredConstructor().newInstance())
                             .setParticipant(HelixParticipant.this)
                             .setCallbackContext(context)
                             .setTaskHelper(new TaskHelperImpl());
-                } catch (InstantiationException | IllegalAccessException e) {
+                } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                     logger.error(
                             "Failed to initialize the task: "
                                     + context.getTaskConfig().getId(),
@@ -135,21 +136,14 @@ public class HelixParticipant<T extends AbstractTask> implements Runnable {
     }
 
     public void run() {
-        ZkClient zkClient = null;
+        ZKHelixAdmin zkHelixAdmin = new ZKHelixAdmin.Builder().setZkAddress(zkAddress).build();
         try {
-            zkClient = new ZkClient(
-                    zkAddress,
-                    ZkClient.DEFAULT_SESSION_TIMEOUT,
-                    ZkClient.DEFAULT_CONNECTION_TIMEOUT,
-                    new ZNRecordSerializer());
-            ZKHelixAdmin zkHelixAdmin = new ZKHelixAdmin(zkClient);
-
             List<String> nodesInCluster = zkHelixAdmin.getInstancesInCluster(clusterName);
 
             if (!nodesInCluster.contains(participantName)) {
                 InstanceConfig instanceConfig = new InstanceConfig(participantName);
                 instanceConfig.setHostName("localhost");
-                instanceConfig.setInstanceEnabled(true);
+                instanceConfig.setInstanceOperation(InstanceOperation.ENABLE);
                 if (taskTypeName != null) {
                     instanceConfig.addTag(taskTypeName);
                 }
@@ -159,14 +153,14 @@ public class HelixParticipant<T extends AbstractTask> implements Runnable {
                 if (taskTypeName != null) {
                     zkHelixAdmin.addInstanceTag(clusterName, participantName, taskTypeName);
                 }
-                zkHelixAdmin.enableInstance(clusterName, participantName, true);
+                zkHelixAdmin.setInstanceOperation(clusterName, participantName, InstanceOperation.ENABLE);
                 logger.debug("Participant: " + participantName + " has been re-enabled at the cluster: " + clusterName);
             }
 
             Runtime.getRuntime().addShutdownHook(new Thread(() -> {
                 logger.debug("Participant: " + participantName + " shutdown hook called");
                 try {
-                    zkHelixAdmin.enableInstance(clusterName, participantName, false);
+                  zkHelixAdmin.setInstanceOperation(clusterName, participantName, InstanceOperation.DISABLE);
                 } catch (Exception e) {
                     logger.warn("Participant: " + participantName + " was not disabled normally", e);
                 }
@@ -178,8 +172,8 @@ public class HelixParticipant<T extends AbstractTask> implements Runnable {
         } catch (Exception ex) {
             logger.error("Error in run() for Participant: " + participantName + ", reason: " + ex, ex);
         } finally {
-            if (zkClient != null) {
-                zkClient.close();
+            if (zkHelixAdmin != null) {
+                zkHelixAdmin.close();
             }
         }
     }
@@ -201,7 +195,16 @@ public class HelixParticipant<T extends AbstractTask> implements Runnable {
             zkHelixManager.connect();
             logger.info("Participant: " + participantName + ", has connected to cluster: " + clusterName);
 
+            if (ServerSettings.getBooleanSetting("participant.monitoring.enabled")) {
+              System.out.println("Starting participant monitoring server .......");
+              var monitoringServer = new MonitoringServer(
+                      ServerSettings.getSetting("participant.monitoring.host"),
+                      ServerSettings.getIntSetting("participant.monitoring.port"));
+              monitoringServer.start();
+              Runtime.getRuntime().addShutdownHook(new Thread(monitoringServer::stop));
+            }
             Thread.currentThread().join();
+            
         } catch (InterruptedException ex) {
             logger.error("Participant: " + participantName + ", is interrupted! reason: " + ex, ex);
         } catch (Exception ex) {
